attempting to create all indices when no input provided